# fretish_robot

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  THIRDPARTYLICENSES  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
examples/digital_microscope/: CMakeLists.txt  README.md  prj.conf  testcase.yaml  west.yml
examples/digital_microscope/assets/: req_fret.json
examples/digital_microscope/assets/robot_files/: DigitalMicroscopeLib.py  tests.robot
examples/digital_microscope/src/: main.c
src/fretish_robot/: FRETLib.py  cli.py  generate_robot.py  requirements.py  writer.py
src/fretish_robot/example_user_lib/: ExampleUserLib.py  example_model.py
talks/: README.md
tests/: e2e_test.py  test_generate_robot.py
tests/testfiles/: executable_robotfile.robot  expected_result.robot  fret_requirements.json
